# YAmGM

./: CMakeLists.txt  LICENSE  Window.cpp  Window.h  main.cpp
Graph/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  stb_image.h
res/shaders/: basicShader.fs.glsl  basicShader.vs.glsl
